<resources>
    <string name="app_name">AlarmClock</string>
    <string name="_12_00">12:00</string>
    <string name="clock">clock</string>
    <string name="alarm_tab">ALARM</string>
    <string name="timer_tab">TIMER</string>
    <string name="stopwatch_tab">STOPWATCH</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="new_alarm">New Alarm</string>
    <string name="arrow"><![CDATA[<---]]></string>
    <string name="plus_sign">+</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="timer_time">Timer time</string>
    <string name="reset">Reset</string>
    <string-array name="hours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>22</item>
        <item>23</item>
    </string-array>
</resources>