<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp">

    <Button

        android:id="@+id/alarm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_tab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/timer_button"/>

    <Button
        android:id="@+id/timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_tab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/alarm_button"
        app:layout_constraintEnd_toStartOf="@+id/stopwatch_button"/>

    <Button
        android:id="@+id/stopwatch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_tab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/timer_button"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>